# NextGen-Insurance

./: .gitignore  README.md  build_project.py  fix.py  fix2.py  migrate_db.py  pyproject.toml  render.yaml  requirements.txt  setup.py  setup_dirs.py
api/: __init__.py  database.py  main.py  pii_redactor.py
app/: __init__.py  streamlit_app.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/add-claim/: page.tsx
frontend/src/app/analyzer/: page.tsx
frontend/src/app/batch/: page.tsx
frontend/src/app/database/: page.tsx
frontend/src/app/simulator/: page.tsx
frontend/src/components/: NeuCard.tsx  Sidebar.tsx
models/: metadata.json
src/: __init__.py  anomaly_detection.py  data_generation.py  data_preprocessing.py  feature_engineering.py  insights.py  model_training.py  nlp_module.py  risk_engine.py
