[project]
name = "insurance-risk-engine"
version = "0.1.0"
description = "Insurance Risk Insights Engine - Fintech Grade Platform"
readme = "README.md"
requires-python = ">=3.9, <3.12"
dependencies = [
    "fastapi==0.100.0",
    "imbalanced-learn==0.10.1",
    "joblib==1.3.1",
    "matplotlib==3.7.2",
    "nltk==3.8.1",
    "numpy==1.24.3",
    "pandas==2.0.3",
    "plotly==5.15.0",
    "pydantic==2.0.3",
    "python-dateutil==2.8.2",
    "python-multipart",
    "scikit-learn==1.3.0",
    "seaborn==0.12.2",
    "sentence-transformers",
    "shap",
    "sqlalchemy",
    "streamlit==1.25.0",
    "torch",
    "tqdm==4.65.0",
    "uvicorn==0.23.0",
    "xgboost==1.7.6",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
